--- a/quiz-exam/public/css/quizPage.css
+++ b/quiz-exam/public/css/quizPage.css
@@ -4,6 +4,7 @@
     width: 100%;
     padding: 30px 20px;
     background-color: white;
+    box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
     border-radius: 20px;
 }
 
@@ -25,6 +26,7 @@
     height: 22vh;
     padding: 25px 30px;
     background-color: white;
+    box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
     border-radius: 20px;
     color: var(--text-color);
     font-size: 16px;
