--- a/quiz-exam/public/css/layout.css
+++ b/quiz-exam/public/css/layout.css
@@ -27,6 +27,7 @@
 
 body{
     min-height: 100vh;
+    height: 100%;
     background-color: var(--body-color);
     transition: var(--tran-05);
 }
@@ -282,3 +283,4 @@ header .image-text .email{
     font-weight: 400;
     color: var(--text-color);
 }
+
