--- a/quiz-exam/public/css/welcomeQuiz.css
+++ b/quiz-exam/public/css/welcomeQuiz.css
@@ -1,8 +1,8 @@
 .welcome-screen{
     position: absolute;
-    width: 600px;
+    width: 700px;
     overflow-wrap: break-word;
-    height: 400px;
+    height: 450px;
     border: 2px solid rgba(255, 255, 255, 0.613);
     border-radius: 20px;
     backdrop-filter: blur(20px);
@@ -12,34 +12,42 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    text-align: center;
+    align-content: flex-start;
     z-index: 100;
-    justify-content: space-evenly;
-    
-
+    justify-content: flex-start;
 }
 
 h1{
     position: relative;
-    top: 0;
-    font-size: 50px;
+    margin: 20px;
+    text-align: center;
+    font-size: 30px;
     color: var(--login-color);
     font-weight: 700;
+}
+
+.information{
+    position: relative; 
+    left: 50%;
+    transform: translateX(-50%);
 }
 
 .description,
 .author,
 .question-num,
 .time-passed{
-    margin-left: 30px;
-    font-size: 22px;
-    display: flex;
-    justify-content: flex-start;
-    width: 100%; 
-    overflow-wrap: break-word;
+    position: relative;
+    font-size: 17px;
+    width: 90%; 
+    margin-bottom: 10px;
+    margin-left: 20px;
 }
 
+
 .btnTake{
+    position: absolute;
+    bottom: 0;
+    margin-bottom: 25px;
     width: 100%;
     height: 45px;
     background-color: var(--primary-color-light);
@@ -47,7 +55,7 @@ h1{
     outline: none;
     border-radius: 6px;
     cursor: pointer;
-    font-size: 1em;
+    font-size: 16px;
     color: #fff;
     font-weight: 500;
 
@@ -58,6 +66,9 @@ h1{
     color: white;
     text-align: center;
     font-weight: 400;
+}
+
+.btnTake p:hover{
     text-decoration: underline;
 }
 
