--- a/quiz-exam/public/css/welcomeQuiz.css
+++ b/quiz-exam/public/css/welcomeQuiz.css
@@ -72,3 +72,18 @@ h1{
     text-decoration: underline;
 }
 
+.unauth{
+    position: absolute;
+    bottom: 0;
+    margin-bottom: 25px;
+    width: 100%;
+    height: 45px;
+    background-color: var(--primary-color-light);
+    border-radius: 6px;
+    font-size: 16px;
+    font-weight: 500;
+    font-size: 22px;
+    color: white;
+    text-align: center;
+    font-weight: 400;
+}
